packages/ui-library/src/components/input/input.module.scss
@use '../common/styles/mixin' as *;

.inputField {
  width: 100%;
  --uil-input-focus-color: var(--uil-info);

  .inputWrapper {
    position: relative;
    display: flex;
    align-items: center;
    width: fit-content;
    max-width: 100%;
    box-sizing: content-box;

    &.basic {
      border-bottom: 1px solid var(--uil-grey-dark);

      .input {
        padding-left: 0;
      }

      .label {
        left: 0;
      }

      .fieldset {
        border-bottom: 1px solid var(--uil-grey-dark);
      }

      .decorator.start {
        margin-right: .875rem;
      }
      
      & ~ .helpText {
        margin-left: 0;
      }
    }

    &.outlined {
      border: 1px solid var(--uil-grey-dark);
      border-radius: 5px;

      .fieldset {
        border: 1px solid var(--uil-grey-dark);
        border-radius: 5px;
      }

      .decorator.start {
        margin-left: .875rem;
      }

      .decorator.end {
        margin-right: .875rem;
      }
    }

    &.basic, &.outlined {
      &:not(:has(.input:disabled)):not(.error):not(:focus-within) {
        &:not(:has(.decorator.visible)):has(.input:placeholder-shown):hover,
        &:has(:not(.input:placeholder-shown)):hover .fieldset {
          border-color: var(--uil-black-w);
        }
      }

      &:focus-within, &:has(.input:not(:placeholder-shown)), &:has(.input:disabled:not(:placeholder-shown)),
      &:has(.decorator.visible) {
        border-color: transparent;
      }

      &:has(.decorator.start) {
        flex-direction: row-reverse;
      }

      &:has(.input:disabled) {
        border-color: var(--uil-grey-alt);
      }
    }

    &.error .label {
      color: var(--uil-error);
      opacity: 1;
    }
    
    &.error, &.error .fieldset {
      border-color: var(--uil-error);
    }

    &:not(.error) .input:not(:disabled):focus ~ .label {
      opacity: 1;
      color: var(--uil-input-focus-color);
    }

    &:not(.error) .input:focus ~ .fieldset {
      border-color: var(--uil-input-focus-color);
    }

    .fieldset {
      border-radius: 0;
      padding: var(--uil-xs);
      margin: 0;
      position: absolute;
      left: 0;
      right: 0;
      bottom: 0;
      pointer-events: none;
      visibility: hidden;
      border: none;
      min-height: 2.1875rem;

      .legend {
        visibility: hidden;
        padding: 0 2px;
      }
    }

    .label {
      position: absolute;
      top: 25%;
      left: .6rem;
      cursor: text;
      color: var(--uil-black-w);
      opacity: .6;
      transition: top .25s ease;
      
      &.textareaLabel {
        top: var(--uil-m);
      }
    }

    .labelText {
      font-size: var(--uil-l);
      line-height: var(--uil-l);
      transition: font-size .2s ease;

      &.asterisk {
        margin-left: var(--uil-xxxs);
      }
    }

    .input {
      box-sizing: border-box;
      width: 100%;
      color: var(--uil-black-w);
      background-color: transparent;
      border-radius: 0;
      padding: var(--uil-xs);
      padding-left: .65rem;
      border: none;
      outline: none;

      &:disabled {
        color: var(--uil-grey-dark);

        & ~ .fieldset, &:not(:placeholder-shown) ~ .fieldset {
          border-color: var(--uil-grey-alt);
        }

        & ~ .label {
          color: var(--uil-grey-dark);
          opacity: 1;
          cursor: default;
        }
      }
      
      &:focus ~ .decorator.onFocus, &:not(:placeholder-shown) ~ .decorator.onFocus {
        visibility: visible;
      }
      
      &:focus ~ .fieldset {
        border-width: 2px;
        padding: 7px;
      }
    }
    
    .textarea {
      min-width: fit-content;
      min-height: fit-content;
      margin: var(--uil-xxs);
      resize: var(--uil-textarea-resize);
      
      & ~ .fieldset {
        top: -.5rem;
      }
    }
    
    .decorator {
      min-width: fit-content;
      opacity: .75;

      &.onFocus {
        visibility: hidden;
      }
    }

    .input:focus ~ *, .input:not(:placeholder-shown) ~ *, .decorator.visible ~ * {
      &.fieldset {
        visibility: visible;
      }
      
      &.label {
        top: -.65rem;
      }
      
      .labelText {
        font-size: var(--uil-m);
        line-height: var(--uil-m);
      }
    }
  }

  .helpText {
    color: var(--uil-grey-dark);
    font-size: var(--uil-m);
    line-height: var(--uil-m);
    margin-left: var(--uil-s);
    margin-top: var(--uil-xxs);
    min-height: var(--uil-m);

    &.error {
      color: var(--uil-error);
    }
  }
}

